# rktbatch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  file.hpp  main.cpp  pipe.hpp
include/: c_string_vector.hpp  errors.hpp  file.hpp  pipe.hpp  strings.hpp  strutils.hpp  syscalls.hpp
